[package]
name = "rb_tree"
description = "A Red Black Tree implementation in Rust"
version = "0.3.3"
authors = ["dbyr <david.michael.byrne17@gmail.com>"]
edition = "2018"
repository = "https://github.com/dbyr/rb_tree"
homepage = "https://github.com/dbyr/rb_tree"
readme = "README.md"
keywords = ["red", "tree", "set", "balanced", "priority"]
categories = ["data-structures"]
license = "MIT OR Apache-2.0"
exclude = [".github*", ".gitignore"]
