[package]
name = "rb_tree"
description = "A Red Black Tree implementation in Rust"
version = "0.4.1"
authors = ["dbyr <david.michael.byrne17@gmail.com>"]
edition = "2018"
repository = "https://github.com/dbyr/rb_tree"
homepage = "https://github.com/dbyr/rb_tree"
readme = "README.md"
keywords = ["red", "tree", "set", "balanced", "priority"]
categories = ["data-structures"]
license = "MIT OR Apache-2.0"
exclude = [".github*", ".gitignore"]

[features]
default = ["set", "queue", "map"]
set = []
queue = []
map = ["set"]

[dev-dependencies]
fnv = "^1.0.7"
rand = "0.8.3"
rand_chacha = "0.3.0"
criterion = "^0.3.4"

[[bench]]
name = "map_bench"
harness = false

[[bench]]
name = "queue_bench"
harness = false